feat: customize add_plate.html and add_plate.html

--- a/banquetBuddy/catering_owners/templates/list_plates.html
+++ b/banquetBuddy/catering_owners/templates/list_plates.html
@@ -29,6 +29,7 @@
     }
     .card {
         margin-bottom: 20px; /* Espacio entre las tarjetas */
+        border-radius: 6%;
     }
     .card-title {
         font-family: 'Acme', sans-serif;
@@ -56,6 +57,7 @@
     .btn-edit:hover {
         background-color: rgb(195, 148, 62);
         border-color: rgb(195, 148, 62);
+        color: #ffffff;
     }
     select.form-control {
         font-size: 15px; /* Cambiar el tamaño de la fuente de los elementos <option> en dispositivos pequeños */
