--- a/banquetBuddy/catering_owners/templates/edit_plate.html
+++ b/banquetBuddy/catering_owners/templates/edit_plate.html
@@ -1,13 +1,27 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
+<style>
+    .btn-primary-custom {
+        background-color: #ffffff; /* Fondo blanco */
+        color: #02483e; /* Letra verde */
+        border-color: #02483e; /* Borde verde */
+    }
+
+    /* Estilo al pasar el ratón sobre el botón */
+    .btn-primary-custom:hover {
+        background-color: #02483e; /* Fondo verde */
+        color: #ffffff; /* Letra blanca */
+        border-color: #02483e; /* Borde verde */
+    }
+</style>
 <div class="container mt-4 mb-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card" style="background-color: #02483e">
-                <div class="container">
-                    <h2 class="mt-4 mb-3 text-white text-center">Edit Plate</h2>
-                    <form method="post">
+            <form method="post">
+                <div class="card" style="background-color: #02483e">
+                    <div class="container">
+                        <h2 class="mt-4 mb-3 text-white text-center">Edit Plate</h2>
                         {% csrf_token %}
                         <div class="form-group text-white">
                             <label for="id_name">Name:</label>
@@ -25,12 +39,12 @@
                             <label for="id_menu">Menu:</label>
                             {{ form.menu }}
                         </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary" style="background-color: #54bfaf">Update Plate</button>
-                        </div>
-                    </form>
+                    </div>
                 </div>
-            </div>
+                <div class="text-center mt-2">
+                    <button type="submit" class="btn btn-primary-custom">Update Plate</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
