--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -47,12 +47,12 @@
                         </li>
                     {% endif %}
 
-                    {% if is_catering_company %}
+                    {% if request.user.is_authenticated and request.user.CateringCompanyusername %}
                     <li class="nav-item">
                         <a class="nav-link" href="/services">Services</a>
                     </li>
                     {% endif %}
-                    {% if is_catering_company or not user.is_authenticated%}
+                    {% if request.user.CateringCompanyusername or not user.is_authenticated%}
                     <li class="nav-item">
                         <a class="nav-link" href="/subscription-plans">Plan</a>
                     </li>
