--- a/banquetBuddy/core/templates/core/subscriptionsplans.html
+++ b/banquetBuddy/core/templates/core/subscriptionsplans.html
@@ -12,10 +12,11 @@
     .col-md-4 {
         display: inline-block;
         background-color: #f3f3f3;
+        text-align: center;
         max-width: 300px;
         border-radius: 10px;
         margin-bottom: 50px;
-        margin-right: 5%;
+        margin-left: 6%;
         box-shadow: 0px 2px 5px #ddd;
     }
 
@@ -73,6 +74,61 @@
         </div>
     </div>
 </div>
+
+{% if request.user.is_authenticated and request.user.ParticularUsername %}
+<div class="container">
+    <div class="row" style="margin-left: 15%;">
+        <div class="col-md-4">
+            <div class="head">
+                <span>Free</span>
+            </div>
+            <div class="price_tag">
+                <span class="price">
+                    <span class="currency">0</span>
+                    <span class="cent">.00</span>
+                    <span class="sign">€</span>
+                    <span class="month">/MON</span>
+                </span>
+            </div>
+            <div class="feature_list" style="margin-top: 15%;">
+                <ul>
+                    <li>✔ Catering hiring</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="head">
+                <span>Premium</span>
+            </div>
+            <div class="price_tag">
+                <span class="price">
+                    <span class="currency">4</span>
+                    <span class="cent">.99</span>
+                    <span class="sign">€</span>
+                    <span class="month">/MON</span>
+                </span>
+            </div>
+            <div class="feature_list" style="margin-top: 15%;">
+                <ul>
+                    <li>✔ Catering hiring</li>
+                    <li>✔ No fees</li>
+                </ul>
+            </div>
+            {% if is_suscribed == TRUE %}
+            <div class="plan-btn" style="margin-top:29% ;">
+                <button type="button" href="" class="btn btn-danger"><a href="{% url 'catering_unsuscribe' %}"
+                        class="text-decoration-none text-light">Cancelar subscripción</a></button>
+            </div>
+            {%else%}
+            <div class="plan-btn" style="margin-top:29% ;">
+                <button type="button" href="" class="btn btn-dark"><a href="{% url 'process_premium' %}"
+                        class="text-decoration-none text-light">Get ready</a></button>
+            </div>
+            {%endif %}
+        </div>
+    </div>
+{% endif %}
+{% if request.user.is_authenticated and user.CateringCompanyusername %}
 <div class="container">
     <div class="row">
         <div class="col-md-4">
@@ -178,4 +234,5 @@
             {%endif %}
         </div>
     </div>
-    {% endblock %}
+    {% endif %}
+{% endblock %}
