feat: Client Chat

--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -68,6 +68,11 @@
                             <a class="nav-link" href="{% url 'catering_contratados' %}">My bookings</a>
                         </li>
                     {% endif %}
+                    {% if request.user.is_authenticated and request.user.ParticularUsername %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'listar_caterings_companies' %}">Chats</a>
+                    </li>
+                {% endif %}
                     {% if request.user.is_authenticated and request.user.CateringCompanyusername %}
                     <li class="nav-item">
                         <a class="nav-link" href={% url 'offer_list' %}>Offers</a>
