feature: Privacy Policy and Terms improved

--- a/banquetBuddy/core/templates/core/actual_terms_and_conditions.html
+++ b/banquetBuddy/core/templates/core/actual_terms_and_conditions.html
@@ -5,8 +5,8 @@
 
 <div class="jumbotron text-center" style="background-color: #02483E; color: #fff;">
     <h1 class="display-4">Términos y Condiciones</h1>
-    <p class="lead">Versión: 1.0</p>
-    <p class="lead">Última actualización: 26 de marzo de 2024</p>
+    <p class="lead">Versión: 2.0</p>
+    <p class="lead">Vigente a partir de: 9 de abril de 2024</p>
 </div>
 
 <!-- Contenido de Términos y Condiciones -->
@@ -17,12 +17,13 @@
             <p>Estos Términos y Condiciones regulan el uso de la aplicación móvil y el sitio web BanquetBuddy (referidos en adelante como "la Plataforma"). Al acceder o utilizar la Plataforma, usted acepta estar vinculado por estos términos.</p>
             <hr style="background-color: #54bfaf;">
 
-            <h2 style="color: #54bfaf;">2. Definiciones</h2>
-            <p>"Usuario": Cualquier persona que acceda o utilice la Plataforma.</p>
-            <p>"Proveedor de Catering": Empresas o individuos que ofrecen servicios de catering a través de la Plataforma.</p>
-            <p>"Organizador de Eventos": Usuarios que buscan servicios de catering para eventos privados o corporativos.</p>
-            <p>"Empleado": Individuos que buscan empleo en el sector de catering a través de la Plataforma.</p>
-            <hr style="background-color: #54bfaf;">
+<!-- Definiciones -->
+<h2 style="color: #54bfaf;">2. Definiciones</h2>
+<p><strong>"Usuario":</strong> Cualquier individuo que acceda o utilice la Plataforma.</p>
+<p><strong>"Proveedor de Catering":</strong> Empresas o individuos que ofrecen servicios de catering a través de la Plataforma.</p>
+<p><strong>"Organizador de Eventos":</strong> Individuos que buscan servicios de catering para eventos privados o corporativos a través de la Plataforma.</p>
+<p><strong>"Empleado":</strong> Individuos que buscan empleo en el sector de catering a través de la Plataforma.</p>
+<hr style="background-color: #54bfaf;">
 
             <h2 style="color: #54bfaf;">3. Uso de la Plataforma</h2>
             <p>La Plataforma está destinada a conectar a Organizadores de Eventos con Proveedores de Catering y Empleados. Los usuarios deben proporcionar información precisa y actualizada en su perfil y al utilizar los servicios. Se prohíbe el uso de la Plataforma para cualquier actividad ilegal o no autorizada.</p>
@@ -30,10 +31,10 @@
 
             <h2 style="color: #54bfaf;">4. Cuentas de Usuario</h2>
             <p>Para acceder a ciertas funciones, los usuarios deben crear una cuenta proporcionando información verdadera y completa. Los usuarios son responsables de mantener la confidencialidad de sus credenciales de acceso y de todas las actividades que ocurran bajo su cuenta. BanquetBuddy se reserva el derecho de suspender o eliminar cuentas que infrinjan estos Términos y Condiciones.</p>
-
             <hr style="background-color: #54bfaf;">
+
             <h2 style="color: #54bfaf;">5. Política de Privacidad</h2>
-            <p>La recopilación y uso de la información personal en BanquetBuddy están regidos por nuestra <a href="{% url 'privacy_policy' %}">Política de Privacidad</a>.</p>
+            <p>Para información detallada sobre el tratamiento de sus datos personales, incluyendo cómo respondemos a las violaciones de datos, por favor refiérase a nuestra <a href="{% url 'privacy_policy' %}">Política de Privacidad</a>.</p>
             <hr style="background-color: #54bfaf;">
 
             <h2 style="color: #54bfaf;">6. Limitaciones de Responsabilidad</h2>
@@ -46,22 +47,29 @@
 
             <h2 style="color: #54bfaf;">8. Enlaces a Terceros</h2>
             <p>La Plataforma puede contener enlaces a sitios web de terceros. Estos enlaces se proporcionan únicamente para su conveniencia y no implican un respaldo de BanquetBuddy a estos sitios. BanquetBuddy no tiene control sobre, y no es responsable del contenido, políticas de privacidad o prácticas de los sitios web de terceros.</p>
-
             <hr style="background-color: #54bfaf;">
+
+            <!-- Modificación de los Términos y Condiciones -->
             <h2 style="color: #54bfaf;">9. Modificación de los Términos y Condiciones</h2>
-            <p>BanquetBuddy se reserva el derecho de modificar estos Términos y Condiciones en cualquier momento. Los cambios entrarán en vigor inmediatamente después de su publicación en la Plataforma. Es responsabilidad del usuario revisar periódicamente los Términos y Condiciones para estar al tanto de cualquier cambio.</p>
+            <p>BanquetBuddy se reserva el derecho de modificar estos Términos y Condiciones en cualquier momento. En caso de cambios significativos, los usuarios serán notificados con antelación a través de correo electrónico. Los cambios entrarán en vigor después de un plazo razonable, que será comunicado en la notificación, permitiendo a los usuarios revisar las modificaciones antes de que se apliquen. Es responsabilidad del usuario revisar periódicamente los Términos y Condiciones para estar al tanto de cualquier actualización. El uso continuado de la Plataforma después de la entrada en vigor de los cambios implica la aceptación de los nuevos términos.</p>
             <hr style="background-color: #54bfaf;">
 
             <h2 style="color: #54bfaf;">10. Resolución de Disputas</h2>
-            <p>Cualquier disputa relacionada con el uso de la Plataforma será resuelta mediante arbitraje, en lugar de en un tribunal, excepto que usted puede reclamar sus reclamaciones en un tribunal de reclamos menores si sus reclamaciones califican. El arbitraje se realizará bajo las reglas vigentes en la jurisdicción de la sede de BanquetBuddy.</p>
+            <p>Para cualquier disputa relacionada con el uso de BanquetBuddy que no pueda resolverse amistosamente, las partes acuerdan someterse al arbitraje bajo las reglas de la Cámara de Comercio Internacional. El lugar del arbitraje será Sevilla, España, y se llevará a cabo en el idioma español. Las decisiones del arbitraje serán definitivas y vinculantes para ambas partes.</p>
             <hr style="background-color: #54bfaf;">
-
+            
             <h2 style="color: #54bfaf;">11. Disposiciones Generales</h2>
             <p>Estos Términos y Condiciones constituyen el acuerdo completo entre los usuarios y BanquetBuddy con respecto al uso de la Plataforma. Si alguna disposición de estos Términos y Condiciones se considera inválida o inaplicable, las disposiciones restantes seguirán siendo válidas y en pleno efecto. La falta de BanquetBuddy para hacer cumplir cualquier derecho o disposición de estos Términos y Condiciones no constituirá una renuncia a tal derecho o disposición.</p>
             <hr style="background-color: #54bfaf;">
 
             <h2 style="color: #54bfaf;">12. Contacto</h2>
-            <p>Si tiene preguntas o comentarios sobre estos Términos y Condiciones, póngase en contacto con nosotros a través de terms_and_conditions@banquetbuddy.es.</p>
+            <p>Si tiene preguntas o comentarios sobre estos Términos y Condiciones, póngase en contacto con nosotros a través de <a href="mailto:legal@banquetbuddy.es" style="color: #54bfaf; font-weight: bold;">legal@banquetbuddy.es</a>.</p>
+            <hr style="background-color: #54bfaf;">
+
+            <!-- Referencia a términos anteriores -->
+            <div class="text-center mt-4">
+                <p>Para consultar versiones anteriores de nuestros Términos y Condiciones, acceda a nuestro <a href="{% url 'previous_terms' %}">archivo de términos</a>.</p>
+
         </div>
     </div>
 </div>
