--- a/banquetBuddy/core/templates/core/politicas y terminos anteriores/policyv1_0.html
+++ b/banquetBuddy/core/templates/core/politicas y terminos anteriores/policyv1_0.html
@@ -5,8 +5,8 @@
 
 <div class="jumbotron text-center" style="background-color: #02483E; color: #fff;">
     <h1 class="display-4">Política de Privacidad</h1>
-    <p class="lead">Versión de la Política: 1.0</p>
-    <p class="lead">Fecha de última revisión: 26 de marzo de 2024</p>
+    <p class="lead">Versión: 1.0 [No Vigente]</p>
+    <p class="lead">Periodo de Vigencia: 26 de marzo de 2024 - 8 de abril 2024</p>
 </div>
 
 <!-- Contenido de la Política de Privacidad -->
@@ -82,5 +82,8 @@
         </div>
     </div>
 </div>
+
+
+
 
 {% endblock %}
