--- a/banquetBuddy/catering_owners/templates/chat.html
+++ b/banquetBuddy/catering_owners/templates/chat.html
@@ -19,7 +19,9 @@
                 <h1 class="mt-5">Chat</h1>
             </div>
             <div class="col d-flex justify-content-end align-items-center">
-                <button class="btn btn-success" type="button" id="recargar" style="background-color: #02483e;">Actualizar Chat</button>
+                <a href="{% url 'chat' id %}">
+                    <button class="btn btn-success" type="button" id="recargar" style="background-color: #02483e;">Actualizar Chat</button>
+                </a>                
             </div>
         </div>
         <div id="message-container" class="mt-4">
@@ -30,7 +32,7 @@
             </div>
             {% endfor %}
         </div>
-        <form id="message-form" method="post" class="mt-4 mb-4">
+        <form id="message-form" method="post" action="{% url 'chat' id %}" class="w-80 mb-4 mt-4">
             {% csrf_token %}
             <div class="input-group">
                 <input type="text" class="form-control" name="content" placeholder="Type your message..."
@@ -42,14 +44,4 @@
         </form>
     </div>
 </body>
-<script>
-    function recargarPagina() {
-        location.reload();
-    }
-
-    window.onload = function () {
-        var botonRecargar = document.getElementById("recargar");
-        botonRecargar.addEventListener("click", recargarPagina);
-    }
-</script>
 {% endblock %}
