--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -90,6 +90,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/JobApplicationList">Offers applied</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'listar_caterings_companies_employee' %}">Chats</a>
+                    </li>
                     {% endif %}
                 </ul>
                 {% if user.is_authenticated %}
