fix : fixed errors on Employee_hiring
An error that allowed employees to apply to a job if they were already
hired was fixed, and fixed employee list on services

--- a/banquetBuddy/catering_employees/templates/employee_offer_list.html
+++ b/banquetBuddy/catering_employees/templates/employee_offer_list.html
@@ -69,6 +69,8 @@
             <p>{{ offer.description }}</p>
             {% if applications|get_value:offer.id %}
                 <p style="color: red;">You've already applied for this offer</p>
+            {% elif hirings|get_value:offer.id %}
+                <p style="color: red;">You're already working on this service</p>
             {% else %}
                 <button class="button-appearance" onclick="applyToOffer({{ offer.id }})">Apply</button>
             {% endif %}
