--- a/banquetBuddy/catering_employees/templates/error_employee_already_applied.html
+++ b/banquetBuddy/catering_employees/templates/error_employee_already_applied.html
@@ -9,7 +9,7 @@
 
     <h1>Error de permisos</h1>
     
-    <p>You have already applied for this offer</p>
+    <p>You have already applied for this offer or you are already hired</p>
     
 </body>
 </html>
