--- a/banquetBuddy/catering_owners/templates/hire_form.html
+++ b/banquetBuddy/catering_owners/templates/hire_form.html
@@ -32,7 +32,7 @@
         <label for="catering_service">Catering Service:</label>
         <input type="text" id="catering_service" name="catering_service" value="{{ catering_service }}" readonly><br><br>
         <label for="employee">Employee:</label>
-        <input type="text" id="employee" name="employee" value="{{ employee }}" readonly><br><br>
+        <input type="text" id="employee" name="employee" value="{{ employee.user }}" readonly><br><br>
         <label for="start_date">Start Date:</label>
         <input type="date" id="start_date" name="start_date"><br><br>
         <label for="end_date">End Date:</label>
