--- a/banquetBuddy/catering_owners/templates/hire_form.html
+++ b/banquetBuddy/catering_owners/templates/hire_form.html
@@ -6,6 +6,14 @@
 {% block content %}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
 
+<script>
+function confirmHire() {
+    const startDate = '{{ offer.start_date|date:"Y-m-d" }}';
+    const endDate = '{{ offer.end_date|date:"Y-m-d" }}' || 'indefinite';
+    const message = `Confirm hiring from ${startDate} to ${endDate}. Continue?`;
+    return confirm(message);
+}
+</script>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,12 +34,12 @@
     </style>
 </head>
 <body>
-    <h1>Complete the form to hire the employee  </h1>
-    <form method="POST">
+    <h1>Complete the form to hire the employee</h1>
+    <form method="POST" onsubmit="return confirmHire();">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save</button>
     </form>
 </body>
 </html>
-{% endblock %}  
+{% endblock %}
