--- a/banquetBuddy/catering_owners/templates/offers/create_offer.html
+++ b/banquetBuddy/catering_owners/templates/offers/create_offer.html
@@ -4,29 +4,25 @@
 {% block content %}
 <style>
     form {
-    margin-top: 5%;
-    margin-left: 9%;
-    margin-right: 9%;
-    margin-bottom: 5%;
-}
-
+        margin-top: 5%;
+        margin-left: 9%;
+        margin-right: 9%;
+        margin-bottom: 5%;
+    }
     h1 {
         text-align: center;
         color: #333;
     }
-
     label {
         display: block;
         margin-top: 3%;
     }
-
-    input[type="text"], textarea {
+    input[type="text"], input[type="date"], textarea, select {
         width: 100%;
         padding: 10px;
         border: 1px solid #ddd;
         border-radius: 5px;
     }
-
     input[type="submit"] {
         display: block;
         width: 80%;
@@ -39,34 +35,29 @@
         margin-left: 10%;
         margin-right: 10%;
     }
-
-   
-
-
 </style>
-<h1 style="margin-top: 5%;">Create new job offer</h1>
+<h1>Create new job offer</h1>
 <div class="form">
     <form action="{% url 'create_offer' %}" method="post">
         {% csrf_token %}
-        <label for="id_catering_service">Catering Service:</label>
-        <select id="id_catering_service" name="catering_service">
-            {% for catering_service in catering_services %}
-                <option value="{{ catering_service.pk }}">{{ catering_service.name }}</option>
+        <label for="id_event">Event:</label>
+        <select id="id_event" name="event">
+            {% for event in events %}
+                <option value="{{ event.pk }}">{{ event.name }} ({{ event.cateringservice.name }})</option>
             {% endfor %}
         </select><br>
-
         <label for="id_title">Title:</label>
         <input type="text" id="id_title" name="title" required><br>
-
         <label for="id_description">Description:</label>
-        <textarea id="id_description" name="description"  required></textarea><br>
-
+        <textarea id="id_description" name="description" required></textarea><br>
         <label for="id_requirements">Requirements:</label>
-        <textarea id="id_requirements" name="requirements"  required></textarea><br>
-
+        <textarea id="id_requirements" name="requirements" required></textarea><br>
         <label for="id_location">Location:</label>
         <input type="text" id="id_location" name="location" required><br>
-
+        <label for="id_start_date">Start Date:</label>
+        <input type="date" id="id_start_date" name="start_date" required><br>
+        <label for="id_end_date">End Date (Optional):</label>
+        <input type="date" id="id_end_date" name="end_date"><br>
         <input type="submit" value="Create offer">
     </form>
 </div>
